# gradio_rag_application

./: README.md  main.py  pyproject.toml  rag.ipynb  rag_pipeline.py  requirements.txt
chroma_db/cc8d85c5-7f38-420a-8af0-8ba95c144e44/: index_metadata.pickle
