[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "fitz>=0.0.1.dev2",
    "gradio>=6.8.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.24.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.1",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]
